Update file paths in config

--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -5,27 +5,27 @@
 DEM_merge_boolean = True
 
 # Specify the main folder where DEMs are located.
-DEM_file_path_to_merge = /home/aldana/Documents/FMI/Surface_flow_modelling/grassdata/NLS_Finland_data/rasters_helsinki
+DEM_file_path_to_merge = /data/DEM_2m_HKI
 
 # Specify the searching criteria for merging the DEMs of interest
 DEM_merge_search_criteria = L*.tif
 
-# Are there more than one landcover file and they have to be merged? True or False. 
+# Are there more than one landcover file and they have to be merged? True or False.
 # If True, provide 'landcover_file_path_to_merge' and 'landcover_merge_search_criteria'
 landcover_merge_boolean = False
 
 # Specify the main folder where landcover files are located.
-landcover_file_path_to_merge = 
+landcover_file_path_to_merge =
 
 # Specify the searching criteria for merging the landcover files of interest
-landcover_merge_search_criteria = 
+landcover_merge_search_criteria =
 
-# Are there more than one imperviousness file and they have to be merged? True or False. 
+# Are there more than one imperviousness file and they have to be merged? True or False.
 # If True, provide 'imperviousness_file_to_merge' and 'imperviousness_merge_search_criteria'
 imperviousness_merge_boolean = True
 
 # Specify the main folder where imperviousness files are located.
-imperviousness_file_path_to_merge = /home/aldana/Documents/FMI/Surface_flow_modelling/grassdata/NLS_Finland_data/clc2018_fi20m/Imperviousness_2018_010m_fi_03035_v020/DATA
+imperviousness_file_path_to_merge = /data/IMD_2018_010m_fi_03035_v020/DATA
 
 # Specify the searching criteria for merging the landcover files of interest
 imperviousness_merge_search_criteria = *N41*.tif *N42*.tif
@@ -33,7 +33,7 @@ imperviousness_merge_search_criteria = *N41*.tif *N42*.tif
 [cropping]
 
 # Path of the shapefile to clip/crop the DEM of interest
-shapefile_file_path = 
+shapefile_file_path =
 
 # Coordinates of region of interest. It has to be closed loop, Ex.: [(x1, y1), (x2, y2), ..., (xn, yn), (x1, y1)]
 x_polygon_coords = 24.943 24.931 24.956 24.956 24.952 24.952 24.943
@@ -50,30 +50,30 @@ DEM_crop_boolean = True
 
 # If 'DEM_merge_boolean' is False, 'DEM_file_path_to_crop' has to be given
 # Path where DEM is located. If there are many and crop has to be done, specify the main folder.
-DEM_file_path_to_crop = 
+DEM_file_path_to_crop =
 
 # Specify the searching criteria for cropping the DEMs of interest
-DEM_crop_search_criteria = 
+DEM_crop_search_criteria =
 
 # Want to crop the landcover file same as DEM file? True or False.
 landcover_crop_boolean = True
 
 # If 'landcover_merge_boolean' is False, this parameter has to be given
 # Path where landcover file is located. If there are many and crop has to be done, specify the main folder.
-landcover_file_path_to_crop = /home/aldana/Documents/FMI/Surface_flow_modelling/grassdata/NLS_Finland_data/clc2018_fi20m/Clc2018_FI20m.tif
+landcover_file_path_to_crop = /data/landcover/Clc2018_FI20m.tif
 
 # Specify the searching criteria for cropping the landcover files of interest
-landcover_crop_search_criteria = 
+landcover_crop_search_criteria =
 
-# Want to crop the imperviousness file same as landcover and DEM files? True or False. 
+# Want to crop the imperviousness file same as landcover and DEM files? True or False.
 imperviousness_crop_boolean = True
 
 # If 'imperviousness_merge_boolean' is False, this parameter has to be given
 # Path where imperviousness file is located. If there are many and crop has to be done, specify the main folder.
-imperviousness_file_path_to_crop = 
+imperviousness_file_path_to_crop =
 
 # Specify the searching criteria for cropping the landcover files of interest
-imperviousness_crop_search_criteria = 
+imperviousness_crop_search_criteria =
 
 [imperviousness]
 # Is there imperviousness map to complement landcover file?
@@ -82,7 +82,7 @@ imperviousness_file_boolean = True
 [rain]
 # Path where the rain files are located either ascii format or Tiff format. If they are in ascii format
 # they will be transformed to Tiff format.
-ascii_files_path = /home/aldana/Documents/FMI/Surface_flow_modelling/grassdata/NLS_Finland_data/radar_Copenhagen/2011-07-02/rain_txt
+ascii_files_path = /data/radar_Copenhagen/2011-07-02/
 GTiff_files_path =
 
 # Specify the searching criteria for ascii files of interest to convert
@@ -151,23 +151,23 @@ end_time = 2011-07-02 23:59
 increment_number = 1
 increment_unit = minutes
 # Duration of the simulation. Format HH:MM:SS
-duration = 
+duration =
 # Duration between two records. Format HH:MM:SS
 record_step = 00:01:00
 
 [grass_input]
 # elevation (raster map/stds)
-dem = 
+dem =
 # friction coefficient (raster map/stds)
-friction = 
+friction =
 # starting water depth (raster map)
 start_h =
 # starting water surface elevation (raster map)
 start_y =
 # inlfitration (raster)
-infiltration = 
+infiltration =
 # losees (raster)
-losses = 
+losses =
 
 # Input user flow in m/s (raster map/stds)
 inflow =
@@ -178,14 +178,14 @@ bcval =
 
 [grass_output]
 # prefix of output strds
-prefix = 
+prefix =
 # strds to be saved, separated by comma
 values = h
 #h, wse, v, vdir, qx, qy, boundaries, infiltration, rainfall, inflow, losses, drainage_stats, verror
 
 [grass_statistics]
 # statistic file
-stats_file = 
+stats_file =
 
 [grass_options]
 # Water depth threshold in metres
