--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -130,7 +130,7 @@ infiltration_rate = True
 # Path to the grass binary
 grass_bin_path = /usr/bin/grass
 # Path to the GIS DataBase
-mygisdb = GRASS_itzi/grassdata
+mygisdb = /tmp/gip/grassdata
 # name of the location
 mylocation = FINLAND
 # name of the mapset
@@ -144,9 +144,9 @@ CRS = 3067
 
 [grass_time]
 # Start of the simulation. Format yyyy-mm-dd HH:MM
-start_time = 2011-07-02 00:00
+start_time = 2011-07-02 12:00
 # End of the simulation. Format yyyy-mm-dd HH:MM
-end_time = 2011-07-02 23:59
+end_time = 2011-07-02 12:59
 # Time increment for creating the .txt file for registering rain files. Ex: data taken minutely
 increment_number = 1
 increment_unit = minutes
@@ -202,3 +202,10 @@ vrouting = 0.1
 dtmax = .5
 # Infiltration time-step in seconds
 dtinf = 60
+
+[storage]
+store_root = /tmp/gip/
+# Relative to store_root or absolute paths
+temp_folder = temp
+grassdata_folder = grassdata
+itzi_config_file = itzi_config_file.ini
