New module for centralised config handling

--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -1,3 +1,14 @@
+[folders]
+# Input
+DEM_files = /data/DEM_2m_HKI
+landcover_files = /data/landcover/Clc2018_FI20m.tif
+imperviousness_files = /data/IMD_2018_010m_fi_03035_v020/DATA
+precipitation_files = /data/radar_Copenhagen/2011-07-02/
+# Output
+temporary_files = /tmp/gip/temp
+grass_output_files = /tmp/gip/grass
+itzi_output_files = /tmp/gip/itzi
+
 [merging]
 
 # Are there more than one DEM and they have to be merged? True or False
@@ -202,10 +213,3 @@ vrouting = 0.1
 dtmax = .5
 # Infiltration time-step in seconds
 dtinf = 60
-
-[storage]
-store_root = /tmp/gip/
-# Relative to store_root or absolute paths
-temp_folder = temp
-grassdata_folder = grassdata
-itzi_config_file = itzi_config_file.ini
