Update docker scripts and config

--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -6,7 +6,7 @@ imperviousness_files = /data/IMD_2018_010m_fi_03035_v020/DATA
 precipitation_files = /data/radar_Copenhagen/2011-07-02/
 # Output
 temporary_files = /tmp/gip/temp
-grass_output_files = /tmp/gip/grass
+processed_files = /tmp/gip/datastore
 itzi_output_files = /tmp/gip/itzi
 
 [merging]
@@ -155,9 +155,9 @@ CRS = 3067
 
 [grass_time]
 # Start of the simulation. Format yyyy-mm-dd HH:MM
-start_time = 2011-07-02 12:00
+start_time = 2011-07-02 00:00
 # End of the simulation. Format yyyy-mm-dd HH:MM
-end_time = 2011-07-02 12:59
+end_time = 2011-07-02 23:59
 # Time increment for creating the .txt file for registering rain files. Ex: data taken minutely
 increment_number = 1
 increment_unit = minutes
