Code documentation and minor cleanup

--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -1,9 +1,19 @@
 [folders]
+# TODO: Replace the specific path settings from sections below with generic paths from this section in the Python code
 # Input
+# Specify the main folder where DEMs are located.
 DEM_files = /data/DEM_2m_HKI
+
+# Specify the main folder where landcover files are located.
 landcover_files = /data/landcover/Clc2018_FI20m.tif
+
+# Specify the main folder where imperviousness files are located.
 imperviousness_files = /data/IMD_2018_010m_fi_03035_v020/DATA
+
+# Path where the rain files are located either ascii format or Tiff format.
+# If they are in ascii format they will be transformed to Tiff format.
 precipitation_files = /data/radar_Copenhagen/2011-07-02/
+
 # Output
 temporary_files = /tmp/gip/temp
 processed_files = /tmp/gip/datastore
@@ -141,11 +151,11 @@ infiltration_rate = True
 # Path to the grass binary
 grass_bin_path = /usr/bin/grass
 # Path to the GIS DataBase
-mygisdb = /tmp/gip/grassdata
+grass_db = /tmp/gip/grassdata
 # name of the location
-mylocation = FINLAND
+location = FINLAND
 # name of the mapset
-mymapset = Helsinki
+mapset = Helsinki
 # name of the region definition
 region =
 # name of raster map to be used as a mask
