start_h methods added to the modules as well as the test file for the water_depth_map file

--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -182,7 +182,7 @@ dem =
 # friction coefficient (raster map/stds)
 friction =
 # starting water depth (raster map)
-start_h =
+# start_h = start_h.tif not needed as this is automated in code
 # starting water surface elevation (raster map)
 start_y =
 # inlfitration (raster)
@@ -199,7 +199,7 @@ bcval =
 
 [grass_output]
 # prefix of output strds
-prefix =
+prefix =floodfill5
 # strds to be saved, separated by comma
 values = h
 #h, wse, v, vdir, qx, qy, boundaries, infiltration, rainfall, inflow, losses, drainage_stats, verror
@@ -223,3 +223,19 @@ vrouting = 0.1
 dtmax = .5
 # Infiltration time-step in seconds
 dtinf = 60
+
+[water]
+# constant, limited, floodfill
+method=floodfill
+# How much water will be added, in meters (for constant and limited methods)
+depth=2
+# if constant, these don't matter
+# if limited, give either elevation or point
+# flood-fill requires reference point
+# note that base level is not at mean sea level in N2000 system
+# x and y should be in DEM projection coordinates
+elevation=0.39
+x=15
+y=213
+# Value that is added to the points on collected by the floodfill method
+addon=0.1
