constant rain option added

--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -146,6 +146,11 @@ rain_crop_boolean = True
 # Does infiltration has to be calculated as space time raster dataset from rain measurements?
 infiltration_rate = True
 
+# Does one want to set up constant rainfield. In this case ASCII and GTiff rain files are neglected.
+constant = True
+## In units mm/h
+intensity_constant = 7.0
+
 [grass_info]
 
 # Path to the grass binary
@@ -165,9 +170,9 @@ CRS = 3067
 
 [grass_time]
 # Start of the simulation. Format yyyy-mm-dd HH:MM
-start_time = 2011-07-02 00:00
+start_time = 2011-07-02 17:00
 # End of the simulation. Format yyyy-mm-dd HH:MM
-end_time = 2011-07-02 23:59
+end_time = 2011-07-02 19:00
 # Time increment for creating the .txt file for registering rain files. Ex: data taken minutely
 increment_number = 1
 increment_unit = minutes
@@ -199,7 +204,7 @@ bcval =
 
 [grass_output]
 # prefix of output strds
-prefix =floodfill5
+prefix =floodfill_constant_rain
 # strds to be saved, separated by comma
 values = h
 #h, wse, v, vdir, qx, qy, boundaries, infiltration, rainfall, inflow, losses, drainage_stats, verror
@@ -228,7 +233,7 @@ dtinf = 60
 # constant, limited, floodfill
 method=floodfill
 # How much water will be added, in meters (for constant and limited methods)
-depth=2
+depth=0.38
 # if constant, these don't matter
 # if limited, give either elevation or point
 # flood-fill requires reference point
