Possibility to specify starting waterlevels as a tif map to give possibility for better flow of data through itzi

--- a/GRASS_itzi_parameters.ini
+++ b/GRASS_itzi_parameters.ini
@@ -147,9 +147,9 @@ rain_crop_boolean = True
 infiltration_rate = True
 
 # Does one want to set up constant rainfield. In this case ASCII and GTiff rain files are neglected.
-constant = True
+constant = False
 ## In units mm/h
-intensity_constant = 7.0
+intensity_constant = 100.0
 
 [grass_info]
 
@@ -172,7 +172,7 @@ CRS = 3067
 # Start of the simulation. Format yyyy-mm-dd HH:MM
 start_time = 2011-07-02 17:00
 # End of the simulation. Format yyyy-mm-dd HH:MM
-end_time = 2011-07-02 19:00
+end_time = 2011-07-02 17:15
 # Time increment for creating the .txt file for registering rain files. Ex: data taken minutely
 increment_number = 1
 increment_unit = minutes
@@ -187,7 +187,7 @@ dem =
 # friction coefficient (raster map/stds)
 friction =
 # starting water depth (raster map)
-# start_h = start_h.tif not needed as this is automated in code
+start_h = floodfill_constant_rain_100mmh_h_0120.tif
 # starting water surface elevation (raster map)
 start_y =
 # inlfitration (raster)
@@ -204,7 +204,7 @@ bcval =
 
 [grass_output]
 # prefix of output strds
-prefix =floodfill_constant_rain
+prefix =floodfill_constant_rain_100mmh_continued_radar_17p15m
 # strds to be saved, separated by comma
 values = h
 #h, wse, v, vdir, qx, qy, boundaries, infiltration, rainfall, inflow, losses, drainage_stats, verror
@@ -230,6 +230,7 @@ dtmax = .5
 dtinf = 60
 
 [water]
+# These are used unless start_h is specified
 # constant, limited, floodfill
 method=floodfill
 # How much water will be added, in meters (for constant and limited methods)
