Started refactoring set_rasters.py to a more testable format and wrote some tests.

--- a/GRASS_itzi_parameters_helsinki.ini
+++ b/GRASS_itzi_parameters_helsinki.ini
@@ -172,7 +172,7 @@ CRS = 3067
 # Start of the simulation. Format yyyy-mm-dd HH:MM
 start_time = 2011-07-02 17:00
 # End of the simulation. Format yyyy-mm-dd HH:MM
-end_time = 2011-07-02 17:03
+end_time = 2011-07-02 17:15
 # Time increment for creating the .txt file for registering rain files. Ex: data taken minutely
 increment_number = 1
 increment_unit = minutes
@@ -204,7 +204,7 @@ bcval =
 
 [grass_output]
 # prefix of output strds
-prefix =floodfill2
+prefix =helsinkivakio3
 # strds to be saved, separated by comma
 values = h
 #h, wse, v, vdir, qx, qy, boundaries, infiltration, rainfall, inflow, losses, drainage_stats, verror
@@ -232,7 +232,7 @@ dtinf = 60
 [water]
 # These are used unless start_h is specified
 # constant, limited, floodfill
-method=floodfill
+method=
 # How much water will be added, in meters (for constant and limited methods)
 depth=0.38
 # if constant, these don't matter
