tried to update the code to a more clean and modification friendly form but the code has rotten too much

--- a/GRASS_itzi_parameters_kotka.ini
+++ b/GRASS_itzi_parameters_kotka.ini
@@ -113,8 +113,8 @@ ascii_search_criteria = *.txt
 
 # Let's now define the projection of the Tiff file when transforming by specifying the upper left corner of the image
 # in a given coordinate system
-x_min = 380000
-y_max = 6678000
+x_min = 488000
+y_max = 6714000
 EPSG_code = 3067
 # Additional parameres for the transformation
 x_rotation = 0
@@ -149,7 +149,7 @@ rain_crop_boolean = True
 infiltration_rate = True
 
 # Does one want to set up constant rainfield. In this case ASCII and GTiff rain files are neglected.
-constant = True
+constant = False
 ## In units mm/h
 intensity_constant = 100.0
 
