make file modified so that make all runs everything. Also ini files for Kotka and Tampere were added.

--- a/GRASS_itzi_parameters_kotka.ini
+++ b/GRASS_itzi_parameters_kotka.ini
@@ -2,7 +2,7 @@
 # TODO: Replace the specific path settings from sections below with generic paths from this section in the Python code
 # Input
 # Specify the main folder where DEMs are located.
-DEM_files = /data/DEM_2m_HKI
+DEM_files = /data/dem-kotka
 
 # Specify the main folder where landcover files are located.
 landcover_files = /data/landcover/Clc2018_FI20m.tif
@@ -26,7 +26,7 @@ itzi_output_files = /tmp/gip/itzi
 DEM_merge_boolean = True
 
 # Specify the main folder where DEMs are located.
-DEM_file_path_to_merge = /data/DEM_2m_HKI
+DEM_file_path_to_merge = /data/dem-kotka
 
 # Specify the searching criteria for merging the DEMs of interest
 DEM_merge_search_criteria = L*.tif
@@ -49,7 +49,7 @@ imperviousness_merge_boolean = True
 imperviousness_file_path_to_merge = /data/IMD_2018_010m_fi_03035_v020/DATA
 
 # Specify the searching criteria for merging the landcover files of interest
-imperviousness_merge_search_criteria = *N41*.tif *N42*.tif
+imperviousness_merge_search_criteria = *N42*.tif
 
 [cropping]
 
@@ -57,8 +57,8 @@ imperviousness_merge_search_criteria = *N41*.tif *N42*.tif
 shapefile_file_path =
 
 # Coordinates of region of interest. It has to be closed loop, Ex.: [(x1, y1), (x2, y2), ..., (xn, yn), (x1, y1)]
-x_polygon_coords = 24.943 24.931 24.956 24.956 24.952 24.952 24.943
-y_polygon_coords = 60.166 60.175 60.175 60.168 60.168 60.167 60.166
+x_polygon_coords = 26.918 26.948 26.948 26.918 26.918
+y_polygon_coords = 60.469 60.469 60.457 60.457 60.469
 
 # Coordinate reference system of the polygon in EPSG format: 4326, 3067, etc.
 polygon_crs = 4326
@@ -111,8 +111,8 @@ ascii_search_criteria = *.txt
 
 # Let's now define the projection of the Tiff file when transforming by specifying the upper left corner of the image
 # in a given coordinate system
-x_min = 380000
-y_max = 6678000
+x_min = 488000
+y_max = 6714000
 EPSG_code = 3067
 # Additional parameres for the transformation
 x_rotation = 0
@@ -129,8 +129,8 @@ y_res = 500
 # and the coordinates of the specific region in which the rain is to be relocated
 rain_relocation = True
 # Coordinates of region of interest
-X_target = 385333.03
-Y_target = 6672806.88
+X_target = 496295.35
+Y_target = 6703740.05
 # Relative distance between radar and rain (in meters)
 X_radar_rain = 9000
 Y_radar_rain = 36500
@@ -154,7 +154,7 @@ grass_bin_path = /usr/bin/grass
 grass_db = /tmp/gip/grassdata
 # name of the location
 location = FINLAND
-# name of the mapset
+# name of the mapset. This has to be Helsinki currently in order to make Kotka work.
 mapset = Helsinki
 # name of the region definition
 region =
@@ -165,9 +165,9 @@ CRS = 3067
 
 [grass_time]
 # Start of the simulation. Format yyyy-mm-dd HH:MM
-start_time = 2011-07-02 17:00
+start_time = 2011-07-02 00:00
 # End of the simulation. Format yyyy-mm-dd HH:MM
-end_time = 2011-07-02 17:15
+end_time = 2011-07-02 23:59
 # Time increment for creating the .txt file for registering rain files. Ex: data taken minutely
 increment_number = 1
 increment_unit = minutes
@@ -199,7 +199,7 @@ bcval =
 
 [grass_output]
 # prefix of output strds
-prefix =
+prefix = kotkasetti2
 # strds to be saved, separated by comma
 values = h
 #h, wse, v, vdir, qx, qy, boundaries, infiltration, rainfall, inflow, losses, drainage_stats, verror
