--- a/GRASS_itzi_parameters_helsinki.yml
+++ b/GRASS_itzi_parameters_helsinki.yml
@@ -39,7 +39,7 @@ merging:
   landcover_file_path_to_merge :
 
   # Specify the searching criteria for merging the landcover files of interest
-  landcover_merge_search_criteria :
+  landcover_merge_search_criteria: []
 
   # Are there more than one imperviousness file and they have to be merged? True or False.
   # If True, provide 'imperviousness_file_to_merge' and 'imperviousness_merge_search_criteria'
@@ -49,7 +49,7 @@ merging:
   imperviousness_file_path_to_merge : "/data/IMD_2018_010m_fi_03035_v020/DATA"
 
   # Specify the searching criteria for merging the landcover files of interest
-  imperviousness_merge_search_criteria : "*N41*.tif *N42*.tif"
+  imperviousness_merge_search_criteria : ["*N41*.tif", "*N42*.tif"]
 
 cropping:
 
@@ -57,8 +57,8 @@ cropping:
   shapefile_file_path :
 
   # Coordinates of region of interest. It has to be closed loop, Ex.: [(x1, y1), (x2, y2), ..., (xn, yn), (x1, y1)]
-  x_polygon_coords : "24.943 24.931 24.956 24.956 24.952 24.952 24.943"
-  y_polygon_coords : "60.166 60.175 60.175 60.168 60.168 60.167 60.166"
+  x_polygon_coords : [24.943, 24.931, 24.956, 24.956, 24.952, 24.952, 24.943]
+  y_polygon_coords : [60.166, 60.175, 60.175, 60.168, 60.168, 60.167, 60.166]
 
   # Coordinate reference system of the polygon in EPSG format: 4326, 3067, etc.
   polygon_crs : 4326
