--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-itzi
-rasterio
-gdal
-shapely
-geopandas
-fiona
-pycrs
-pyproj
-opencv-python
+itzi==20.5
+rasterio==1.2.10
+gdal==3.0.4
+shapely==1.8.0
+geopandas==0.10.2
+fiona==1.8.20
+pycrs==1.0.2
+pyproj==3.3.0
+opencv-python==4.5.5.62
+pyyaml==6.0
+numpy==1.22.2 
